--- a/homepage/about.html
+++ b/homepage/about.html
@@ -38,44 +38,24 @@
       href="#ShoppingBag" title="Checkout" >
   </map> 
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
+  <img src="images.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
 
   <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
 
   <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-</p>
-<!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
+    Hello!
 
-<p align="center">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+I am Janelle Humphries and I have had a passion for fitness for over a decade. Throughout my childhood I played various sports including volleyball, softball, and track & field. Once I went to college, my focus shifted to weight lifting since I was no longer playing any organized sports but wanted to make fitness a priority.<br>
+<br>
+I am 21 years old and work a full-time job in Tech. I grew up in Dutchess County, New York but moved to the Albany area for work. I studied at Syracuse University where I studied Information Management and Technology. <br>
+<br>
+My focus is trying to show people how you can work a full-time job and still make fitness a priority in your life. All it takes is a little dedication and discipline to get any results you want in the gym! <br>
+<br>
+Come with me on my fitness journey so we can grow together! <br>
+<br>
+ 
 
-  <!-- Another filler text to allow for appropriate text to be added. -->
-
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-
-  <!-- filler image to allow for my own personal image to be put in. -->
-
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-    <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-      <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-     <!-- filler image to allow for my own personal image to be put in. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
+  
 
   </body>
 
