--- a/homepage/freeworkouts.html
+++ b/homepage/freeworkouts.html
@@ -38,44 +38,43 @@
       href="#ShoppingBag" title="Checkout" >
   </map> 
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
+  <img src="freeworkoutpic.jpg" alt="freeworkoutpic" style="width: 1200px;px;height: 400px;px;">
 
   <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
 
   <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    Free Workouts:<br>
+    <br>
+    My favorite Exercises for each muscle group: <br>
+    <br>
+    Upperbody: <br>
+    <br>
+    Shoulders = Lateral Raises <br>
+    <br>
+    Chest = Cable Flys <br>
+    <br>
+    Triceps = Single Arm Cable Kickbacks <br>
+    <br>
+    Back = Lat Pull Downs + Pull Ups <br>
+    <br>
+    Biceps = Slow Dumbbell Curls <br>
+    <br>
+    Quads = Front Squats + Quad Extensions <br>
+    <br>
+    Glutes = Hip Thrusts <br>
+    <br>
+    Hamstrings = RDLs + Hamstring Leg Curls <br>
+    <br>
+    Calfs = Slow Weighted Calf Raises <br>
+    <br>
 </p>
 <!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
 
-<p align="center">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
 
-  <!-- Another filler text to allow for appropriate text to be added. -->
 
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
 
-  <!-- filler image to allow for my own personal image to be put in. -->
 
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-    <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-      <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-     <!-- filler image to allow for my own personal image to be put in. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
+  
 
   </body>
 
