--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -17,6 +17,25 @@
 
     <style>
       body { text-align: center }
+
+      * {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+      
       </style>
 
   </head>
@@ -37,45 +56,36 @@
           <area shape="rect" coords="1200,0,1275,73" alt="ShoppingBag" 
       href="#ShoppingBag" title="Checkout" >
   </map> 
+
+
+
+  <div class="row">
+    <div class="column">
+      <img src="gradpic1.jpg" alt="gradpic1" style="width:100%">
+    </div>
+    <div class="column">
+      <img src="gradpic2.jpg" alt="gradpic2" style="width:100%">
+    </div>
+
+    <h2>Janelle Humphries Fitness</h2>
+
+<p>
+
+  Welcome to my Fitness Website! <br>
+
+  In this website you will find everything including my different custome made workout programs, free workouts, fitness tips, and a little bit about me. If you are interested in joining me on navigating a healthy and active lifestyle while also working a full time job, follow along!<br>
+<br>
+  Let's go on out fitness journeys together!<br>
+
+</p>
+
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
+ 
 
   <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
 
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-</p>
-<!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
+ 
 
-<p align="center">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-  <!-- Another filler text to allow for appropriate text to be added. -->
-
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-
-  <!-- filler image to allow for my own personal image to be put in. -->
-
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-    <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-      <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-     <!-- filler image to allow for my own personal image to be put in. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
 
   </body>
 
