--- a/homepage/programs.html
+++ b/homepage/programs.html
@@ -38,44 +38,35 @@
       href="#ShoppingBag" title="Checkout" >
   </map> 
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
+  <img src="workoutprogram.jpg" alt="workoutprogram" style="width: 1200px;px;height: 400px;px;">
 
   <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
 
   <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    <h2>Programs</h2>
+    Below are two specifically designed programs to meet your fitness goals.
+
+    The first program is focused on Weight Loss. The weight loss program includes an increase in cardio matched with weighted exercises. The weighted exercises are low weight + high reps. This balance between cardio and weighted exercises will help get rid of unwanted body fat and tone your body. If these are the results you want, download the program below!
+    
 </p>
 <!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
 
 <p align="center">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+  <h3>Weight Loss Program</h3>
+    <p>Download the Weight Loss program here! <a href="C:\Users\18453\OneDrive\Desktop\fitnesswebsite\homepage\Weight Loss Workout Plan.pdf">Download</a>.</p>
+
+<p>
+  The second program is focused on Muscle Gain. The muscle gain program includes exercises focused on high weight + low reps. The best way to grow muscle is to use heavy weight. Each split is also broken down to ensure you are working on every muscle group in your body. Remember: While focusing on form to make sure you are not hurting your body is ESSENTIAL, once you have the correct form, you can lift more than you think you can! Push yourself to see that muscle growth! If these are the results you want, download the program below!
+</p>
+
+    <h4>Muscle Gain Program</h4>
+    <p>Download the Muscle Gain program here! <a href="C:\Users\18453\OneDrive\Desktop\fitnesswebsite\homepage\Muscule Gain Wrokout Plan.pdf">Download</a>.</p>
 
   <!-- Another filler text to allow for appropriate text to be added. -->
 
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
+ 
 
-  <!-- filler image to allow for my own personal image to be put in. -->
-
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-    <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
-      <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-     <!-- filler image to allow for my own personal image to be put in. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
-
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
+   
 
   </body>
 
