--- a/homepage/tips.html
+++ b/homepage/tips.html
@@ -38,44 +38,85 @@
       href="#ShoppingBag" title="Checkout" >
   </map> 
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
+  <img src="foodhealth.jpg" alt="foodhealth" style="width: 1200px;px;height: 400px;px;">
 
   <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
 
   <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    1. Eating healthy is only sustainable if you balance it out. Eat WHAT YOU WANT! If you are craving something that is considered “unhealthy”, it is still okay to eat it and see results. Having a little bit of anything in moderation will not ruin your results or make you unhealthy. <br>
+    <br>
+2. If you want to maintain a healthy diet, having your cravings here and there will ensure you are not limiting yourself. <br>
+<br>
+3. Having the mindset of “I cannot eat this piece of chocolate” will only make you want it more. Then, people tend to over eat when they do eat their cravings. Instead of saying “I can never have chocolate”, try “I will only have half of this piece of chocolate today, and I’ll save the rest for tomorrow!” <br>
+<br>
+4. Eat what you want so you are living a balanced, healthy and HAPPY life! <br>
+<br>
 </p>
 <!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
 
-<p align="center">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-
   <!-- Another filler text to allow for appropriate text to be added. -->
 
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
+  <img src="lemon.jpg" alt="lemon" style="width: 1200px;px;height: 200px;px;">
 
   <!-- filler image to allow for my own personal image to be put in. -->
 
   <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    What I Eat: <br>
+    <br>
+Breakfast: <br>
+<br>
+Scrambled Eggs <br>
+<br>
+Oikos Pro Vanilla Yogurt <br>
+<br>
+Carbs: <br>
+<br>
+Bagel <br>
+<br>
+Toast <br>
+<br>
+Lunch: <br>
+<br>
+Chicken <br>
+<br>
+White Rice <br>
+<br>
+Broccoli <br>
+<br>
+Dinner: <br>
+<br>
+Ground Turkey <br>
+<br>
+White Rice <br>
+<br>
+Broccoli <br>
+<br>
+Favorite Snacks: <br>
+<br>
+Quest Protein Bars <br>
+<br>
+Rice Krispie Treats - before a workout! <br>
+<br>
+Popcorn <br>
+<br>
+Pretzels <br>
+<br>
 
     <!-- filler text to allow for appripriate text of the page to be entered. -->
 
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
 
       <!-- filler text to allow for appripriate text of the page to be entered. -->
 
-    <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
+    <img src="alphalete1.jpg" alt="alphalete1" style="width: 1200px;px;height: 200px;px;">
      <!-- filler image to allow for my own personal image to be put in. -->
 
     <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+      My favorite activewear clothing brand: Alphalete <br>
+      <br>
+      Favorite shoes for weightlifting: Any Flat sneaker  <br>
+
        <!-- filler text to allow for appripriate text of the page to be entered. -->
 
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
 
   </body>
 
