--- a/homepage/checkout.html
+++ b/homepage/checkout.html
@@ -16,7 +16,7 @@
     <title>Home</title>
 
     <style>
-      body { text-align: center }
+      body { text-align: left }
       </style>
 
   </head>
@@ -38,44 +38,53 @@
       href="#ShoppingBag" title="Checkout" >
   </map> 
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 400px;px;">
+  
 
-  <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
+  <form action="/action_page.php">
+    <h2>Name</h2>
+    <label for="fname">First name:</label><br>
+    <input type="text" id="fname" name="fname" value="Enter Text Here"><br>
 
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-</p>
-<!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
+    <label for="lname">Last name:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-<p align="center">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    <h3>Address Information</h3>
+    <label for="fname">Address Line 1:</label><br>
+    <input type="text" id="fname" name="fname" value="Enter Text Here"><br>
 
-  <!-- Another filler text to allow for appropriate text to be added. -->
+    <label for="lname">Address Line 2:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-  <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
+    <label for="lname">City:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-  <!-- filler image to allow for my own personal image to be put in. -->
+    <label for="lname">State:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-  <p align="center">
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    <label for="lname">Zip:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-    <!-- filler text to allow for appripriate text of the page to be entered. -->
+    <h4>Discount Code</h4>
+    <label for="lname">Enter Discount Code:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
+    <h5>Payment Information</h5>
+    <label for="lname">Card Number:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-      <!-- filler text to allow for appripriate text of the page to be entered. -->
+    <label for="lname">CSV:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br>
 
-    <img src="insertimg.ong.png" alt="insertimg" style="width: 1200px;px;height: 200px;px;">
-     <!-- filler image to allow for my own personal image to be put in. -->
+    <label for="lname">Expiration Date:</label><br>
+    <input type="text" id="lname" name="lname" value="Enter Text Here"><br><br>
 
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
+    <input type="submit" value="Checkout">
+  </form> 
 
-    <p align="center">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, quidem deserunt facere, aspernatur quos a nobis eaque aperiam dicta veritatis maiores repudiandae, nemo nesciunt et perferendis error natus molestias. Molestias.
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
+
+    
+  
+  
 
   </body>
 
