--- a/homepage/tips.html
+++ b/homepage/tips.html
@@ -25,17 +25,17 @@
       <map name="imagemap">
   
           <area shape="rect" coords="0,0,160,73" alt="Logo" 
-      href="#logo" title="Logo" >
+      href="https://jhumphries5.github.io/fitnesswebsite/homepage/homepage.html" title="Logo" >
           <area shape="rect" coords="300,0,475,73" alt="Programs" 
-      href="#Programs" title="Programs" >
+      href="https://jhumphries5.github.io/fitnesswebsite/homepage/programs.html" title="Programs" >
           <area shape="rect" coords="550,0,700,73" alt="FreeWorkout" 
-      href="#Freeworkouts" title="Free Workouts" >
+      href="https://jhumphries5.github.io/fitnesswebsite/homepage/freeworkouts.html" title="Free Workouts" >
           <area shape="rect" coords="800,0,850,73" alt="Tips" 
-      href="#Tips" title="Tips" >
+      href="https://jhumphries5.github.io/fitnesswebsite/homepage/tips.html" title="Tips" >
           <area shape="rect" coords="1000,0,1150,73" alt="About" 
-      href="#About" title="About" >
+      href="https://jhumphries5.github.io/fitnesswebsite/homepage/about.html" title="About" >
           <area shape="rect" coords="1200,0,1275,73" alt="ShoppingBag" 
-      href="#ShoppingBag" title="Checkout" >
+      href="https://jhumphries5.github.io/fitnesswebsite/homepage/checkout.html" title="Checkout" >
   </map> 
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
   <img src="foodhealth.jpg" alt="foodhealth" style="width: 1200px;px;height: 400px;px;">
