--- a/homepage/about.html
+++ b/homepage/about.html
@@ -54,7 +54,7 @@ My focus is trying to show people how you can work a full-time job and still mak
 Come with me on my fitness journey so we can grow together! <br>
 <br>
  
-
+  <!-- This about page is important because it gives some background on myself. In the fitness industry, credibilites is essential. I wanted to give a little bit about myself because people cannot trust your workout plan unless they trust you! -->
   
 
   </body>
