--- a/homepage/checkout.html
+++ b/homepage/checkout.html
@@ -84,7 +84,7 @@
 
 
     
-  
+  <!-- This is a simplified checkout page since we cannot actually checkout any items. I included text fields that you could enter information into as if you were going to 'buy' one of my workout plans.-->
   
 
   </body>
