--- a/homepage/freeworkouts.html
+++ b/homepage/freeworkouts.html
@@ -69,7 +69,7 @@
     Calfs = Slow Weighted Calf Raises <br>
     <br>
 </p>
-<!-- This is filler text that will be populated with appropriate text for each page followed by either more text or another image.-->
+<!-- This page goes over some 'free' workout that are staples in my own workout. These specifically chosen exercises are the ones that have helped me see the growth in my own body, so I wanted to outline them on this page.-->
 
 
 
