--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -82,7 +82,7 @@
 <!-- This banner img will stay on every page as serve as navigation for the site. The only page that may differ in the future is the checkout page.-->
  
 
-  <!-- This 'insert img' serves as a place holder for a large image to be displayed on the page. The image on the page will be in correlation to the specific page and will be different for every single one. -->
+  <!--This is a simple home page that has pictures of myslef and a quick into to the site. I got inspiration from other fitness influencers by keeping the homepage simple and straight to the point. -->
 
  
 
