--- a/homepage/programs.html
+++ b/homepage/programs.html
@@ -62,7 +62,7 @@
     <h4>Muscle Gain Program</h4>
     <p>Download the Muscle Gain program here! <a href="C:\Users\18453\OneDrive\Desktop\fitnesswebsite\homepage\Muscule Gain Wrokout Plan.pdf">Download</a>.</p>
 
-  <!-- Another filler text to allow for appropriate text to be added. -->
+  <!-- This page displays my self-designed workout programs. I made the links downloadable for all since we can't actually 'checkout' these items. I wanted everyone who looks at this website to have access to my workout plans! -->
 
  
 
