--- a/homepage/tips.html
+++ b/homepage/tips.html
@@ -115,7 +115,7 @@ Pretzels <br>
       <br>
       Favorite shoes for weightlifting: Any Flat sneaker  <br>
 
-       <!-- filler text to allow for appripriate text of the page to be entered. -->
+       <!-- This page goes over some tips and tricks I have found when workout out so you can get the most out of your workout. I also incluses my favorite foods and favorite athletic brands because everything is a balance in your fitness journey!-->
 
 
   </body>
